--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,28 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
+    productFlavors {
+        flavorDimensions 'product', 'side'
+        bike {
+            dimension 'product'
+            applicationIdSuffix '.bike'
+            manifestPlaceholders.appName = "Bike"
+
+            buildConfigField "String", "FIREBASE_FLAVOR_COLLECTION", "\"bike\""
+        }
+        client {
+            dimension 'side'
+            manifestPlaceholders.appNameSuffix = ""
+        }
+        admin {
+            dimension 'side'
+            applicationIdSuffix '.admin'
+            manifestPlaceholders.appNameSuffix = " Admin"
+        }
+    }
 }
 
 dependencies {
