Projeto White Label com Flavors Adm/Client

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,4 @@ kapt {
         option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
     }
 }
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
